aws/cloudformation/CsrStack-pw-cleaned.yaml
AWSTemplateFormatVersion: 2010-09-09
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'true'
      CidrBlock: 172.16.0.0/16
  PublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 172.16.1.0/24
  PublicNic:
    Type: 'AWS::EC2::NetworkInterface'
    Properties:
      PrivateIpAddress: 172.16.1.10
      GroupSet:
        - !Ref CsrSecurityGroup
      SubnetId: !Ref PublicSubnet
  PrivateNic:
    Type: 'AWS::EC2::NetworkInterface'
    Properties:
      SourceDestCheck: 'false'
      PrivateIpAddress: 172.16.2.10
      GroupSet:
        - !Ref CsrSecurityGroup
      SubnetId: !Ref PrivateSubnet
  CsrAws01:
    Type: 'AWS::EC2::Instance'
    Properties:
      InstanceType: !Ref InstanceType
      ImageId: !FindInMap 
        - CiscoCsrAMI
        - !Ref 'AWS::Region'
        - !Ref LicenseModel
      KeyName: !Ref KeyName
      NetworkInterfaces:
        - DeviceIndex: '0'
          NetworkInterfaceId: !Ref PublicNic
        - DeviceIndex: '1'
          NetworkInterfaceId: !Ref PrivateNic
      UserData: !Base64 
        'Fn::Join':
          - ''
          - - |
              ios-config-1="hostname csr-aws-01"
            - |
              ios-config-2="interface g2"
            - |
              ios-config-3="description Inside"
            - |
              ios-config-4="ip address dhcp"
            - |
              ios-config-5="no shut"
            - |
              ios-config-6="service password-encryption"
            - |
              ios-config-7="no shut"
            - |
              ios-config-8="crypto ikev2 proposal AES/GCM/256"
            - |
              ios-config-9="encryption aes-gcm-256"
            - |
              ios-config-10="prf sha512"
            - |
              ios-config-11="group 19"
            - |
              ios-config-12="crypto ikev2 policy AES/GCM/256"
            - |
              ios-config-13="match fvrf any"
            - |
              ios-config-14="proposal AES/GCM/256"
            - |
              ios-config-15="crypto ikev2 keyring DMVPN-KEYRING"
            - |
              ios-config-16="peer ANY"
            - |
              ios-config-17="address 0.0.0.0 0.0.0.0"
            - |
              ios-config-18="pre-shared-key <PSK_PASSWORD>"
            - |
              ios-config-19="crypto ikev2 profile DMVPN-IKEv2-PROFILE"
            - |
              ios-config-20="description PSK Profile"
            - |
              ios-config-21="match identity remote address 0.0.0.0"
            - |
              ios-config-22="identity local address <EXTERNAL_IP>"
            - |
              ios-config-23="authentication remote pre-share"
            - |
              ios-config-24="authentication local pre-share"
            - |
              ios-config-25="keyring local DMVPN-KEYRING"
            - |
              ios-config-26="dpd 40 5 on-demand"
            - >
              ios-config-27="crypto ipsec security-association replay
              window-size 1024"
            - >
              ios-config-28="crypto ipsec transform-set AES256/GCM/TRANSFORM
              esp-gcm 256"
            - |
              ios-config-29="mode transport"
            - |
              ios-config-30="crypto ipsec profile DMVPN-IPSEC-PROFILE"
            - |
              ios-config-31="set transform-set AES256/GCM/TRANSFORM"
            - |
              ios-config-32="set ikev2-profile DMVPN-IKEv2-PROFILE"
            - |
              ios-config-33="interface Tunnel0"
            - |
              ios-config-34="description DMVPN"
            - |
              ios-config-35="ip address 10.1.0.4 255.255.255.0"
            - |
              ios-config-36="no ip redirects"
            - |
              ios-config-37="ip mtu 1400"
            - |
              ios-config-38="ip nhrp authentication <NHRP_PASSWORD>"
            - |
              ios-config-39="ip nhrp network-id 100"
            - |
              ios-config-40="ip nhrp nhs 10.1.0.2 nbma <HUB_IP_ADDRESS> multicast"
            - |
              ios-config-41="ip tcp adjust-mss 1360"
            - |
              ios-config-42="ip ospf authentication-key 7 <OSPF_HASH>"
            - |
              ios-config-43="ip ospf network point-to-multipoint"
            - |
              ios-config-44="ip ospf hello-interval 10"
            - |
              ios-config-45="tunnel source GigabitEthernet1"
            - |
              ios-config-46="tunnel mode gre multipoint"
            - |
              ios-config-47="tunnel key 100"
            - >
              ios-config-48="tunnel protection ipsec profile
              DMVPN-IPSEC-PROFILE"
            - |
              ios-config-49="router ospf 10"
            - |
              ios-config-50="router-id 10.1.0.4"
            - |
              ios-config-51="network 10.1.0.0 0.0.0.255 area 0"
            - |
              ios-config-52="network 172.16.2.0 0.0.0.255 area 2"
    DependsOn:
      - PublicRoute
  CsrSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Allow access for IPsec and SSH traffic
      SecurityGroupIngress:
        - IpProtocol: udp
          FromPort: '500'
          ToPort: '500'
          CidrIp: 0.0.0.0/0
        - IpProtocol: udp
          FromPort: '4500'
          ToPort: '4500'
          CidrIp: 0.0.0.0/0
        - IpProtocol: '50'
          CidrIp: 0.0.0.0/0
        - IpProtocol: icmp
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: 172.16.2.0/24
        - IpProtocol: icmp
          FromPort: '-1'
          ToPort: '-1'
          CidrIp: 192.168.200.0/24
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: !Ref SSHLocation
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties: {}
  VpcGwAttach:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
  PublicRoute:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
    DependsOn:
      - InternetGateway
  PublicRouteTable:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref PublicRoute
      GatewayId: !Ref InternetGateway
  PubSubnetRtAssocation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PublicRoute
      SubnetId: !Ref PublicSubnet
  PrivateSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 172.16.2.0/24
  PrivateRoute:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
    DependsOn:
      - InternetGateway
  PrivateRouteTable:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      RouteTableId: !Ref PrivateRoute
      GatewayId: !Ref InternetGateway
  PrivSubnetRtAssocation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId: !Ref PrivateRoute
      SubnetId: !Ref PrivateSubnet
Outputs:
  PublicNic:
    Description: G1 interface of CSR
    Value: !Ref PublicNic
    Export:
      Name: !Sub '${AWS::StackName}-PublicNic'
  PrivateNic:
    Description: G2 interface of CSR
    Value: !Ref PrivateNic
    Export:
      Name: !Sub '${AWS::StackName}-PrivateNic'
  PrivateRoute:
    Description: Private Route ID
    Value: !Ref PrivateRoute
    Export:
      Name: !Sub '${AWS::StackName}-PrivateRoute'
  InstanceId:
    Description: InstanceID
    Value: !Ref CsrAws01
    Export:
      Name: !Sub '${AWS::StackName}-InstanceId'
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instances
    Type: 'AWS::EC2::KeyPair::KeyName'
    Default: my_key
  InstanceType:
    Description: CSR EC2 instance type
    Type: String
    Default: t2.medium
    AllowedValues:
      - t1.micro
      - t2.micro
      - t2.small
      - t2.medium
      - m1.small
      - m1.medium
      - m1.large
      - m1.xlarge
      - m2.xlarge
      - m2.2xlarge
      - m2.4xlarge
      - m3.medium
      - m3.large
      - m3.xlarge
      - m3.2xlarge
      - c1.medium
      - c1.xlarge
      - c3.large
      - c3.xlarge
      - c3.2xlarge
      - c3.4xlarge
      - c3.8xlarge
      - c4.large
      - c4.xlarge
      - c4.2xlarge
      - c4.4xlarge
      - c4.8xlarge
      - g2.2xlarge
      - r3.large
      - r3.xlarge
      - r3.2xlarge
      - r3.4xlarge
      - r3.8xlarge
      - i2.xlarge
      - i2.2xlarge
      - i2.4xlarge
      - i2.8xlarge
      - d2.xlarge
      - d2.2xlarge
      - d2.4xlarge
      - d2.8xlarge
      - hi1.4xlarge
      - hs1.8xlarge
      - cr1.8xlarge
      - cc2.8xlarge
      - cg1.4xlarge
    ConstraintDescription: must be a valid EC2 instance type.
  SSHLocation:
    Description: ' The IP address range that can be used to access the web server using SSH.'
    Type: String
    MinLength: '9'
    MaxLength: '18'
    Default: 0.0.0.0/0
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: must be a valid IP CIDR range of the form x.x.x.x/x.
  LicenseModel:
    Description: >-
      Choose between BYOL (Bring Your Own License) and License Included license
      models. Remember to first subscribe the the appropriate Marketplace AMI!
    Type: String
    Default: BYOL
    AllowedValues:
      - LicenseIncluded
      - BYOL
Mappings:
  CiscoCsrAMI:
    us-west-1:
      BYOL: ami-99e5d0f9
      LicenseIncluded: ami-99e5d0f9
  AWSInstanceType2Arch:
    t1.micro:
      Arch: PV64
    t2.micro:
      Arch: HVM64
    t2.small:
      Arch: HVM64
    t2.medium:
      Arch: HVM64
    m1.small:
      Arch: PV64
    m1.medium:
      Arch: PV64
    m1.large:
      Arch: PV64
    m1.xlarge:
      Arch: PV64
    m2.xlarge:
      Arch: PV64
    m2.2xlarge:
      Arch: PV64
    m2.4xlarge:
      Arch: PV64
    m3.medium:
      Arch: HVM64
    m3.large:
      Arch: HVM64
    m3.xlarge:
      Arch: HVM64
    m3.2xlarge:
      Arch: HVM64
    c1.medium:
      Arch: PV64
    c1.xlarge:
      Arch: PV64
    c3.large:
      Arch: HVM64
    c3.xlarge:
      Arch: HVM64
    c3.2xlarge:
      Arch: HVM64
    c3.4xlarge:
      Arch: HVM64
    c3.8xlarge:
      Arch: HVM64
    c4.large:
      Arch: HVM64
    c4.xlarge:
      Arch: HVM64
    c4.2xlarge:
      Arch: HVM64
    c4.4xlarge:
      Arch: HVM64
    c4.8xlarge:
      Arch: HVM64
    g2.2xlarge:
      Arch: HVMG2
    r3.large:
      Arch: HVM64
    r3.xlarge:
      Arch: HVM64
    r3.2xlarge:
      Arch: HVM64
    r3.4xlarge:
      Arch: HVM64
    r3.8xlarge:
      Arch: HVM64
    i2.xlarge:
      Arch: HVM64
    i2.2xlarge:
      Arch: HVM64
    i2.4xlarge:
      Arch: HVM64
    i2.8xlarge:
      Arch: HVM64
    d2.xlarge:
      Arch: HVM64
    d2.2xlarge:
      Arch: HVM64
    d2.4xlarge:
      Arch: HVM64
    d2.8xlarge:
      Arch: HVM64
    hi1.4xlarge:
      Arch: HVM64
    hs1.8xlarge:
      Arch: HVM64
    cr1.8xlarge:
      Arch: HVM64
    cc2.8xlarge:
      Arch: HVM64
  AWSRegionArch2AMI:
    us-east-1:
      PV64: ami-1ccae774
      HVM64: ami-1ecae776
      HVMG2: ami-8c6b40e4
    us-west-2:
      PV64: ami-ff527ecf
      HVM64: ami-e7527ed7
      HVMG2: ami-abbe919b
    us-west-1:
      PV64: ami-d514f291
      HVM64: ami-d114f295
      HVMG2: ami-f31ffeb7
    eu-west-1:
      PV64: ami-bf0897c8
      HVM64: ami-a10897d6
      HVMG2: ami-d5bc24a2
    eu-central-1:
      PV64: ami-ac221fb1
      HVM64: ami-a8221fb5
      HVMG2: ami-7cd2ef61
    ap-northeast-1:
      PV64: ami-27f90e27
      HVM64: ami-cbf90ecb
      HVMG2: ami-6318e863
    ap-southeast-1:
      PV64: ami-acd9e8fe
      HVM64: ami-68d8e93a
      HVMG2: ami-3807376a
    ap-southeast-2:
      PV64: ami-ff9cecc5
      HVM64: ami-fd9cecc7
      HVMG2: ami-89790ab3
    sa-east-1:
      PV64: ami-bb2890a6
      HVM64: ami-b52890a8
      HVMG2: NOT_SUPPORTED
    cn-north-1:
      PV64: ami-fa39abc3
      HVM64: ami-f239abcb
      HVMG2: NOT_SUPPORTED
